idea: add exports needed by google-java-format plugin